--- a/.classpath
+++ b/.classpath
@@ -1,29 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con"
-		path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
-			<attribute name="module" value="true" />
+			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src/main/java" />
-	<classpathentry kind="con"
-		path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
+	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
 		<attributes>
-			<attribute name="owner.project.facets" value="jst.web" />
+			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con"
-		path="org.eclipse.jst.j2ee.internal.web.container" />
-	<classpathentry kind="con"
-		path="org.eclipse.jst.j2ee.internal.module.container" />
-	<classpathentry kind="lib"
-		path="/Users/nhbthach/eclipse-workspace/javaee-jsp/javaeeJSP/src/main/webapp/WEB-INF/lib/javax.servlet-api-4.0.1.jar" />
-	<classpathentry kind="lib"
-		path="/Users/nhbthach/eclipse-workspace/javaee-jsp/javaeeJSP/src/main/webapp/WEB-INF/lib/jstl-1.2.jar" />
-	<classpathentry kind="lib"
-		path="/Users/nhbthach/eclipse-workspace/javaee-jsp/javaeeJSP/src/main/webapp/WEB-INF/lib/mysql-connector-java-8.0.28.jar" />
-	<classpathentry kind="lib"
-		path="/Users/nhbthach/eclipse-workspace/javaee-jsp/javaeeJSP/src/main/webapp/WEB-INF/lib/jakarta.servlet.jsp.jstl-api-1.2.7.jar" />
-	<classpathentry kind="output" path="build/classes" />
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jakarta.servlet.jsp.jstl-api-1.2.7.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/javax.servlet-api-4.0.1.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/mysql-connector-java-8.0.28.jar"/>
+	<classpathentry kind="output" path="build/classes"/>
 </classpath>
